--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "scripts": {
     "dev:kof": "slidev slides/kof/slides.md --open",
     "dev:red": "slidev slides/red/slides.md --open",
-    "build:kof": "slidev build slides/kof/slides.md -o dist/kof",
-    "build:red": "slidev build slides/red/slides.md -o dist/red",
-    "build:all": "npm run build:kof && npm run build:red",
-    "build": "npm run build:all",
-    "export": "slidev export"
+    "build:kof": "slidev build slides/kof/slides.md --base /kof/ --out ../../dist/kof",
+    "build:red": "slidev build slides/red/slides.md --base /red/ --out ../../dist/red",
+    "build": "npm run build:kof && npm run build:red"
   },
   "dependencies": {
     "@slidev/cli": "^52.1.0",
