--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,3 @@
 [build]
-  command = "npm run build"
+  command = "npm ci && npm run build"
   publish = "dist"
-
-# Deep-linking for each deck
-[[redirects]]
-  from = "/kof/*"
-  to = "/kof/index.html"
-  status = 200
-
-[[redirects]]
-  from = "/red/*"
-  to = "/red/index.html"
-  status = 200
