--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,14 @@
+# netlify.toml
 [build]
-  command = "npm ci && npm run build"
-  publish = "dist"
+command = "npm ci && npm run build"
+publish = "dist"
+
+[[redirects]]
+  from = "/:deck/*"
+  to = "/:deck/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/"
+  to = "/index.html"
+  status = 200
