--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
-# netlify.toml
 [build]
-command = "npm ci && npm run build"
-publish = "dist"
+  command = "npm ci && npm run build"
+  publish = "dist"
+
+[build.environment]
+  NODE_VERSION = "20"
+  NODE_OPTIONS = "--max_old_space_size=4096"
 
 [[redirects]]
   from = "/:deck/*"
